--- a/frontend/estudafacil/src/index.css
+++ b/frontend/estudafacil/src/index.css
@@ -17,3 +17,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 80%;
+  }
+}
